--- a/index.html
+++ b/index.html
@@ -285,45 +285,48 @@
             let upVector = new THREE.Vector3(0, 1, 0); // Default up vector
 
             switch (axis) {
-                case 'x':
+                case 'x': // Right
                     targetPosition = new THREE.Vector3(cameraRadius, 0, 0);
-                    targetRotY = 0;
+                    targetRotY = -Math.PI / 2;
                     targetRotX = 0;
+                    upVector.set(0, 1, 0);
                     break;
-                case '-x':
+                case '-x': // Left
                     targetPosition = new THREE.Vector3(-cameraRadius, 0, 0);
-                    targetRotY = Math.PI;
+                    targetRotY = Math.PI / 2;
                     targetRotX = 0;
+                    upVector.set(0, 1, 0);
                     break;
-                case 'y':
+                case 'y': // Back
                     targetPosition = new THREE.Vector3(0, cameraRadius, 0);
                     targetRotX = -Math.PI / 2;
                     targetRotY = 0;
-                    upVector.set(0, 0, 1); // Z-axis up for top-down view
+                    upVector.set(0, 0, -1); // Negative Z-axis up for back view
                     break;
-                case '-y':
+                case '-y': // Front
                     targetPosition = new THREE.Vector3(0, -cameraRadius, 0);
                     targetRotX = Math.PI / 2;
                     targetRotY = 0;
-                    upVector.set(0, 0, -1); // Negative Z-axis up for bottom-up view
+                    upVector.set(0, 0, 1); // Positive Z-axis up for front view
                     break;
-                case 'z':
+                case 'z': // Up
                     targetPosition = new THREE.Vector3(0, 0, cameraRadius);
-                    targetRotX = 0;
+                    targetRotX = -Math.PI / 2;
                     targetRotY = 0;
+                    upVector.set(0, 1, 0);
                     break;
-                case '-z':
+                case '-z': // Down
                     targetPosition = new THREE.Vector3(0, 0, -cameraRadius);
-                    targetRotX = 0;
-                    targetRotY = Math.PI;
+                    targetRotX = Math.PI / 2;
+                    targetRotY = 0;
+                    upVector.set(0, 1, 0);
                     break;
             }
 
             if (targetPosition) {
                 
-                   // 👇 Send axis info to parent iframe
+                // 👇 Send axis info to parent iframe
                  window.parent.postMessage({ type: 'setCameraAxis', axis }, '*');  
-                
                 const startPosition = camera.position.clone();
                 const startRotX = rotationX;
                 const startRotY = rotationY;
